master
		- Fixed: PasswordValidator was not being used in password reset
		- Fixed: When a token is expired the user is properly redirected to the sign up or reset pages now
		- Added enableTokenJob property to enable/disable the background job
		- Fixed method typo AuthenticationMethod: toScala.
		- Right http codes are returned for ajax calls now (scala api, java needs fixing yet)
		- Java API is broken for now (sorry!)
		- New assetsController property to override the assets class in RoutesHelper. Needed when a custom Asset controller is used by the app.  
		- Added hasher id to PasswordInfo
		- Added support for registering multiple PasswordHashers to allow upgrading the hashing algorithm.
		- Introduced Identity trait. SocialUser now implements it (this will allow developers to return their own user class from UserService)
2.0.7	- 2012-11-25		
		- Added password change functionality
		- Changed SecureSocial.currentUser/userFromSession methods to support websockets (thanks @KimStevel for catching this)
		- Use HTTPS for avatar URL in the Facebook provider (thanks @chazmcgarvey)
		- Added documentation for password plugins
		- Added base class for Java based password hashers: BasePasswordHasher
		- Added PasswordValidator to allow customization of password rules/strength
		- Added DefaultPasswordValidator that enforces the length of passwords
		- Fixed a RuntimeException in the github provider (thanks @chazmcgarvey)
		- Changes to TwitterProvider: use of API 1.1 and https for the image avatar (thanks @chazmcgarvey)
2.0.6	- 2012-11-16		
		- Fixed a problem where plugins were not being registered when Play recompiled the app
		- Added a scheduled task to delete expired signup/password reset tokens
		- Added tokenDuration and tokenDeleteInterval properties for userpass
		- Changed findByEmail to findByEmailAndProvider in UserService to make it clearer that both fields must match