@@ -52,6 +52,6 @@ object LoginPage extends Controller
    */
   def logout = Action { implicit request =>
     val to = Play.configuration.getString(onLogoutGoTo).getOrElse(RoutesHelper.login().absoluteURL(IdentityProvider.sslEnabled))
-    Redirect(to).withSession(session - SecureSocial.UserKey - SecureSocial.ProviderKey)
+    Redirect(to).withSession(session - SecureSocial.UserKey - SecureSocial.ProviderKey - SecureSocial.LastAccessKey)
   }
 }
