@@ -29,6 +29,7 @@
             @helper.inputPassword(
             resetForm("password.password2"),
             '_label -> Messages("securesocial.signup.password2"),
+            '_error -> resetForm.error("password"),
             'class -> "input-xlarge"
             )
 
